headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    app: headlamp
    app.kubernetes.io/name: headlamp
spec:
  type: ClusterIP
  selector:
    app: headlamp
    app.kubernetes.io/name: headlamp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4466
